<resources>
    <string name="app_name">Timetabler App</string>
    <string name="login">login</string>
    <string name="username_error">Username is required!</string>
    <string name="password_error">Password is required</string>
    <string name="register">Register</string>
    <string name="user_id">User Id, Use your registration number</string>
    <string name="info">Select a role below.  If you do not select,  the default will be selected for you</string>
    <string name="in_session">In Session</string>
    <string name="clear_role">Clear Role</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="auth_error">Username or password is wrong.</string>
    <string name="programmes">Choose a Programme</string>
    <string name="departments">Choose Department</string>
    <string name="faculties">Choose Faculty:</string>
    <string name="campuses">Choose Campus:</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="admin_id">Admin Id</string>
    <string name="logout">Logout</string>
    <string name="schedule_registration">Schedule Registration</string>
    <string name="start_date">Start Date</string>
    <string name="deadline">Deadline</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="channel_name">Unit Registration Notification</string>
    <string name="channel_description">Notify Students when to register for courses</string>
    <string name="surname">Surname</string>
    <string name="placeholder">Timetable will appear here</string>
    <string name="placeholder2">Timer</string>
    <string name="registered_units">Show Registered Units</string>
    <string name="remove">Remove</string>
    <string name="settings">Settings</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="chat_forum">Chat/Forum</string>
    <string name="add_lecturer">Add Lecturer</string>
    <string name="add_classes">Add Classes</string>
    <string name="add_units">Add Units</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="home">Home</string>
    <string name="lecturer">Lecturers</string>
    <string name="room">Rooms</string>
    <string name="course">Courses</string>
    <string name="error">An error occurred, please contact administrator</string>
    <string name="add_course">Add Course</string>
    <string name="unit_id">Unit Id</string>
    <string name="unit_name">Unit Name</string>
    <string name="is_common">Is Common</string>
    <string name="is_practical">Is Practical</string>
    <string name="campus_name">Campus Name</string>
    <string name="more">More</string>
    <string name="add_campus">Add Campus</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="add_department">Add Department</string>
    <string name="programme_name">Programme Name</string>
    <string name="add_programme">Add Programme</string>
    <string name="campus_id">Campus Id</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="practical">Practical</string>
    <string name="common">Common</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="department_name">Department Name</string>
    <string name="lecturer_id">Lecturer Id</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="not_practical">Not practical</string>
    <string name="not_common">Not a common unit</string>
    <string name="text_holder">You are modifying your username.\nUsernames are required to be all lowercase letters. You can include numbers.</string>
    <string name="user_details">User Details</string>
    <string name="full_name">Full Name</string>
    <string name="year_of_study">Year of Study</string>
    <string name="save_details">Save</string>
    <string name="current_password">Current Password</string>
    <string name="not_in_session">Not in session</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_avatar">User avatar</string>
    <string name="placeholder3">Placeholder</string>
    <string name="edit_username">Edit_username</string>
    <string name="life_is_crazy">life is crazy</string>
    <string name="show_current_password">Show_current_password</string>
    <string name="show_password">Show password</string>
    <string name="edit_user_details">Edit user details</string>
    <string name="reset_user_details">Reset user details</string>
    <string name="instructions"><![CDATA[Ensure that your name follows this form: FirstName<space>MiddlerName<space>LastName.]]></string>
    <string name="department_id">Department Id</string>
    <string name="class_id">Class ID</string>
    <string name="hall_name">Hall Name</string>
    <string name="available">Available</string>
    <string name="is_lab">Is a Lab</string>
    <string name="volume">Volume</string>
    <string name="halls">Choose Halls</string>
    <string name="date">Date</string>
    <string name="programme_id">Programme Id</string>
    <string name="hall_id">Hall Id</string>
    <string name="hall">Halls</string>

    <string-array name="roles">
        <item>Lecturer</item>
        <item>Student</item>
        <item>Admin</item>
    </string-array>
</resources>
