<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="21sp"
        android:textColorHint="@color/my_kind_of_grey"/>

    <EditText
        android:id="@+id/edit_middle_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        android:textSize="21sp"
        android:textColorHint="@color/my_kind_of_grey"/>

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="21sp"
        android:textColorHint="@color/my_kind_of_grey"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="21sp"
        android:textColorHint="@color/my_kind_of_grey"/>
</LinearLayout>