<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_room_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_class_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/class_id"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text_faculty_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/faculty_name"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/text_hall_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:text="@string/hall_name"/>

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:textSize="14sp"
            android:text="@string/volume"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_availability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="14sp"
                android:text="@string/available"/>

            <TextView
                android:id="@+id/text_is_lab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="14sp"
                android:text="@string/is_lab"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_room_edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_room_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_margin="30dp"
            android:hint="@string/class_id"
            android:inputType="textPersonName"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/text_faculties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:text="@string/faculties"/>

        <Spinner
            android:id="@+id/change_spinner_faculty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorAccent"
            android:textAlignment="viewStart"/>

        <TextView
            android:id="@+id/text_halls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp"
            android:textColor="#fff"
            android:text="@string/halls"/>

        <Spinner
            android:id="@+id/change_spinner_hall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/colorAccent"
            android:textAlignment="viewStart"/>

        <EditText
            android:id="@+id/edit_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:layout_margin="30dp"
            android:hint="@string/volume"
            android:inputType="textPersonName"
            android:textSize="21sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/switch_availability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/available"
                android:textColor="@color/white"
                android:textAlignment="center"/>

            <Switch
                android:id="@+id/switch_is_lab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/is_lab"
                android:textColor="@color/white"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>